github username change

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <br><br> <u>Please feel free to reach out to me for a referral request or just to have a chat about new technology!</u></p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/avaibh/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/im-vaibhav"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/avaibh"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://scholar.google.com/citations?user=NY03MMQAAAAJ&hl=en" target="_blank" style="text-decoration: none;"><i class="ai ai-google-scholar"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/imvaibhav/"><i class="fab fa-instagram"></i></a>
                         <a class="social-icon" href="https://twitch.tv/avaibh/"><i class="fab fa-twitch"></i></a>
@@ -259,7 +259,7 @@
                             <div class="subheading mb-3">Big Data | Supervised Learning, Spark ML, Kafka, MongoDB</div>
                             <p> Built a machine learning model on a big data scale (accuracy of 91%) on Spark ML, MongoDB and Kafka
                                 to identify Twitter bots that spread political propaganda.
-                                <a href="https://github.com/im-vaibhav/Twitter-Bot-Detection" target="_blank"
+                                <a href="https://github.com/avaibh/Twitter-Bot-Detection" target="_blank"
                                     style="color:#DC143C;">[Github]</a></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Spring 2020</span></div>
@@ -273,7 +273,7 @@
                                 model to predict whether an email is spam or not. This system that upon receipt of an email message,
                                 automatically flag it as spam or not, based on the prediction obtained from the ML model. And it
                                 replies back to the sender of the email with a reasonable prediction.
-                                <a href="https://github.com/im-vaibhav/Intelligent-System-Design-using-Cloud" target="_blank"
+                                <a href="https://github.com/avaibh/Intelligent-System-Design-using-Cloud" target="_blank"
                                     style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
@@ -287,7 +287,7 @@
                             <p>Voice Based Photo Album Search is a serverless, microservice driven web-based application, that can
                                 be searched using natural language through both text and voice. We can upload photos and search then
                                 similar to a image search engine.
-                                <a href="https://github.com/im-vaibhav/NLP-Powered-Photo-Search" target="_blank"
+                                <a href="https://github.com/avaibh/NLP-Powered-Photo-Search" target="_blank"
                                     style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
@@ -301,7 +301,7 @@
                             <p>Smart-Door-Authentication-System is a serverless, microservice driven web-based application. It
                                 builds a distributed system that authenticates people and provides them with access to a virtual
                                 door.
-                                <a href="https://github.com/im-vaibhav/Smart-Door-Authentication-System" target="_blank"
+                                <a href="https://github.com/avaibh/Smart-Door-Authentication-System" target="_blank"
                                     style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
@@ -328,7 +328,7 @@
                             <div class="subheading mb-3">Database Systems | MySQL</div>
                             <p>Designed the schema and created a normalized apartments database with 5 tables linked together using
                                 keys.
-                                <a href="https://github.com/im-vaibhav/Apartment-Database-Project" target="_blank"
+                                <a href="https://github.com/avaibh/Apartment-Database-Project" target="_blank"
                                     style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
@@ -341,7 +341,7 @@
                             <div class="subheading mb-3">Operating System | C, Assembly, XV6</div>
                             <p>Implemented my own Shell from scratch in XV6 operating system using UNIX system calls as a part of
                                 Operating Systems course at New York University. Command execution, I/O Redirection and Pipelining.
-                                <a href="https://github.com/im-vaibhav/UnixShell" target="_blank"
+                                <a href="https://github.com/avaibh/UnixShell" target="_blank"
                                     style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
@@ -354,7 +354,7 @@
                             <div class="subheading mb-3">Operating System | C, Assembly, XV6</div>
                             <p>Implemented and Tested lottery scheduling, a randomized algorithm that allows processes to receive a
                                 proportional share of the CPU without explicitly tracking how long each process has been run.
-                                <a href="https://github.com/im-vaibhav/xv6-LotterScheduler" target="_blank"
+                                <a href="https://github.com/avaibh/xv6-LotterScheduler" target="_blank"
                                     style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
@@ -367,7 +367,7 @@
                                 Girvan-Newman Clustering</div>
                             <p>AAAI wants an automated unsupervised script to group research documents into different clusters, so
                                 that all papers having similar high-level domains will be grouped together.
-                                <a href="https://github.com/im-vaibhav/ML-Assignments-CS60050/tree/master/15CE10057_ML_A3"
+                                <a href="https://github.com/avaibh/ML-Assignments-CS60050/tree/master/15CE10057_ML_A3"
                                     target="_blank" style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
@@ -380,7 +380,7 @@
                                 LSTM</div>
                             <p>The project aims at identifying different stances adopted by the people, concerning various aspects
                                 of cancer (such as lethality, prevention, causes, etc) from an extensive collection of tweets.
-                                <a href="https://github.com/im-vaibhav/Stance-Detection-From-Tweets" target="_blank"
+                                <a href="https://github.com/avaibh/Stance-Detection-From-Tweets" target="_blank"
                                     style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
@@ -393,7 +393,7 @@
                             <p>Designed an algorithm for word corrections of post OCR Sanskrit scripts through statistical language
                                 models using edit distance on a known dictionary. Improved the accuracy of the algorithm up by 10%,
                                 by introducing morphological language constraints from the grammar, using Sandhi.
-                                <a href="https://github.com/im-vaibhav/Post-OCR-Processing" target="_blank"
+                                <a href="https://github.com/avaibh/Post-OCR-Processing" target="_blank"
                                     style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
@@ -406,7 +406,7 @@
                             <p>Worked on number of projects while completing the Android Development Course on Udacity placed by
                                 Google. Developed variety of apps that uses basic android concepts of user interface and user
                                 inputs.
-                                <a href="https://github.com/im-vaibhav/Android" target="_blank" style="color:#DC143C;">[Github]</a>
+                                <a href="https://github.com/avaibh/Android" target="_blank" style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2017 - 2018</span></div>
