--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                         <span class="text-primary">Agrawal</span>
                     </h1>
                     <div class="subheading mb-5">
-                        San Francisco, CA ·
-                        <a href="mailto:va8817@gmail.com">va8817@gmail.com</a>
+                        Software Engineer · <span style="color:black;">San Francisco, CA </span>
                         <br />
                         <br />
                         Aiming for INFINITY!
@@ -60,16 +59,17 @@
 
                         I am a computer science enthusiast. I hold a Master of Science in Computer Science from New York University.                
                        
-                       I did my undergrad at Indian Institute of Technology Kharagpur.  I graduated with a major in Civil Engineering and a minor in Computer Science and Engineering. Through my journey at IIT KGP, I found my interest in computer science which has led me to pursue my advanced study in CS. 
+                       I did my undergrad at Indian Institute of Technology Kharagpur.  I graduated with a gold medal. Through my journey at IIT KGP, I found my interest in computer science which has led me to pursue my advanced study in CS. 
                        
                        I do a lot of data science and machine learning related projects and research work, that can be found in my GitHub. I also participate in programming contests at Codechef and LeetCode. 
                     <br><br> <u>Please feel free to reach out to me for a referral request or just to have a chat about new technology!</u></p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/avaibh/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/avaibh"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://scholar.google.com/citations?user=NY03MMQAAAAJ&hl=en" target="_blank" style="text-decoration: none;"><i class="ai ai-google-scholar"></i></a>
+                        <a class="social-icon" href="https://scholar.google.com/citations?user=NY03MMQAAAAJ&hl=en" target="_blank" style="text-decoration: none;"><i class="ai ai-google-scholar"></i></a>                        
                         <a class="social-icon" href="https://www.instagram.com/imvaibhav/"><i class="fab fa-instagram"></i></a>
-                        <a class="social-icon" href="https://twitch.tv/avaibh/"><i class="fab fa-twitch"></i></a>
+                        <a class="social-icon" href="https://www.twitch.tv/avaibh/"><i class="fab fa-twitch"></i></a>
+                        <a class="social-icon" href="mailto:va8817@gmail.com"><i class="fas fa-envelope"></i></a>
                     </div>
                     <br>                    
                     <!-- <div class="resume-section-link text-md-center"><a href="Resume.pdf" target="_blank"><button type="button" class="btn btn-primary">Resume</button></a></div> -->
