--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <a class="social-icon" href="https://github.com/avaibh"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://scholar.google.com/citations?user=NY03MMQAAAAJ&hl=en" target="_blank" style="text-decoration: none;"><i class="ai ai-google-scholar"></i></a>                        
                         <a class="social-icon" href="https://www.instagram.com/imvaibhav/"><i class="fab fa-instagram"></i></a>
-                        <a class="social-icon" href="https://www.twitch.tv/avaibh/"><i class="fab fa-twitch"></i></a>
+                        <!-- <a class="social-icon" href="https://www.twitch.tv/avaibh/"><i class="fab fa-twitch"></i></a> -->
                         <a class="social-icon" href="mailto:va8817@gmail.com"><i class="fas fa-envelope"></i></a>
                     </div>
                     <br>                    
