--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Developer Engineer</h3>
                             <div class="subheading mb-3"><img alt src="/assets/img/twitch.jpg" style="max-height: 32px;">   Twitch, San Francisco CA</div>
-                            <p>SDE I on Money Team. (Go and Typescript)<i></i></p>
+                            <p>SDE I on Money Team. (Go, GQL, AWS and Ruby on Rails)<i></i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2021 - Present</span></div>
                     </div>
@@ -157,9 +157,9 @@
                     <div class="subheading mb-3">Over 5000 lines of code</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="devicon-go-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-cplusplus-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-java-plain-wordmark"></i></li>
                         <li class="list-inline-item"><i class="devicon-python-plain-wordmark"></i></li>
+                        <li class="list-inline-item"><i class="devicon-cplusplus-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-java-plain-wordmark"></i></li>                        
                         <li class="list-inline-item"><i class="devicon-c-plain"></i></li>
                     </ul>  
                     <div class="subheading mb-3">Data Science & Machine Learning</div>
@@ -171,24 +171,37 @@
                     <br>
                     <div class="subheading mb-3">Full Stack Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-aws"></i></li>
-                        <li class="list-inline-item" ><i class="devicon-android-plain-wordmark"></i></li>
-                        <li class="list-inline-item" ><i class="devicon-django-plain"></i></li>
-                        <li class="list-inline-item" ><i class="devicon-react-original-wordmark"></i></li>
-                        <li class="list-inline-item" ><i class="devicon-nodejs-plain-wordmark"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-aws"></i></li>                        
+                        <li class="list-inline-item" ><i class="devicon-android-plain-wordmark"></i></li>                                                
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                        <li class="list-inline-item"><i class="devicon-typescript-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-bootstrap-plain-wordmark"></i></li>
+                        <li class="list-inline-item"><i class="devicon-php-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-graphql-plain-wordmark colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-django-plain"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <li class="list-inline-item"><i class="devicon-react-original-wordmark"></i></li>                
+                        <li class="list-inline-item"><i class="devicon-nodejs-plain-wordmark"></i></li>
+                        <li class="list-inline-item"><i class="devicon-rails-plain-wordmar"></i></li>
+                        <li class="list-inline-item"><i class="devicon-d3js-plain"></i></li>
                         <li class="list-inline-item" ><i class="devicon-mysql-plain-wordmark"></i></li>
-                        <li class="list-inline-item" ><i class="devicon-mongodb-plain-wordmark"></i></li>
-                        <li class="list-inline-item" ><i class="devicon-docker-plain-wordmark"></i></li>
-                        <li class="list-inline-item" ><i class="devicon-bootstrap-plain-wordmark"></i></li>
-                        <li class="list-inline-item" ><i class="devicon-git-plain-wordmark"></i></li>
-                        <li class="list-inline-item" ><i class="devicon-d3js-plain"></i></li>
-                        <li class="list-inline-item" ><i class="devicon-vim-plain"></i></li>
+                        <li class="list-inline-item" ><i class="devicon-mongodb-plain-wordmark"></i></li>                        
+                        <li class="list-inline-item"><i class="devicon-redis-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-vim-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-bash-plain colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-ssh-original-wordmark"></i></li>
+                        <li class="list-inline-item" ><i class="devicon-git-plain-wordmark"></i></li>                        
+                        <li class="list-inline-item"><i class="devicon-github-original"></i></li>
+                        <li class="list-inline-item"><i class="devicon-jenkins-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-tomcat-line"></i></li>
+                        <li class="list-inline-item"><i class="devicon-kubernetes-plain-wordmark"></i></li>                        
+                        <li class="list-inline-item"><i class="devicon-docker-plain-wordmark"></i></li>                        
                         <li class="list-inline-item" ><i class="devicon-visualstudio-plain"></i></li>
-                        <li class="list-inline-item" ><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 60 65" style=" fill:#000000;"><path d="M 43.582031 2 L 29.535156 17.201172 L 22.226562 10.402344 L 19 13.802734 L 29.724609 24 L 47 5.2109375 L 43.582031 2 z M 9 4 C 6.2504839 4 4 6.2504839 4 9 L 4 41 C 4 43.749516 6.2504839 46 9 46 L 41 46 C 43.749516 46 46 43.749516 46 41 L 46 18.25 L 46 9.25 L 44 11.419922 L 44 18.25 L 44 41 C 44 42.668484 42.668484 44 41 44 L 9 44 C 7.3315161 44 6 42.668484 6 41 L 6 9 C 6 7.3315161 7.3315161 6 9 6 L 30.875 6 C 30.877007 6.0000116 30.878849 6 30.880859 6 L 37.160156 6 L 39.009766 4 L 30.880859 4 A 1.0001 1.0001 0 0 0 30.875 4 L 9 4 z M 14.636719 22 C 10.909719 22 8.453125 24.010391 8.453125 27.025391 C 8.453125 29.492391 9.9082031 31.044391 12.908203 31.775391 L 15.091797 32.324219 C 17.364797 32.872219 18.273437 33.603609 18.273438 34.974609 C 18.273438 36.527609 16.727719 37.623047 14.636719 37.623047 C 12.363719 37.623047 10.819875 36.644 10.546875 35 L 8 35 C 8.182 38.015 10.727078 40 14.455078 40 C 18.455078 40 21 37.990172 21 34.701172 C 21 32.143172 19.545797 30.680422 16.091797 29.857422 L 14.181641 29.400391 C 11.999641 28.852391 11.091797 28.212594 11.091797 26.933594 C 11.091797 25.380594 12.455875 24.376953 14.546875 24.376953 C 16.546875 24.376953 17.909641 25.380594 18.181641 26.933594 L 20.726562 26.933594 C 20.635562 24.009594 18.091719 22 14.636719 22 z M 30.089844 27 C 26.339844 27 24 29.559062 24 33.539062 C 24 37.519062 26.339844 40 30.089844 40 C 33.089844 40 35.250547 38.670906 35.810547 36.378906 L 33.279297 36.378906 C 32.809297 37.351906 31.689453 37.876953 30.189453 37.876953 C 28.119453 37.876953 26.719141 36.249 26.619141 34.125 L 26.619141 33.945312 L 36 33.945312 L 36 33.28125 C 36 29.39125 33.749844 27 30.089844 27 z M 30.089844 29.050781 C 31.949844 29.050781 33.139844 30.16 33.339844 32 L 26.75 32 C 26.97 30.23 28.239844 29.050781 30.089844 29.050781 z"></path></svg></li>                        
+                        <li class="list-inline-item"><i class="devicon-intellij-plain-wordmark"></i></li>
+                        <li class="list-inline-item"><i class="devicon-pycharm-plain-wordmark"></i></li>
+                        <li class="list-inline-item"><i class="devicon-linux-plain colored"></i></li>
                     </ul>
                     
                     <div class="subheading mb-3">Product Managment Experience</div>
