change skills order

--- a/index.html
+++ b/index.html
@@ -161,13 +161,7 @@
                         <li class="list-inline-item"><i class="devicon-cplusplus-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-java-plain-wordmark"></i></li>                        
                         <li class="list-inline-item"><i class="devicon-c-plain"></i></li>
-                    </ul>  
-                    <div class="subheading mb-3">Data Science & Machine Learning</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            Scikit-learn, Pandas, Pytorch, Statistics, NLTK, Keras, TensorFlow, Matplotlib, Hadoop, Map Reduce, Spark, Spark ML, Scala, Apache Kafka, Elastic Search, Kibana, Swagger
-                        </li>                                                
-                    </ul>                  
+                    </ul>                      
                     <br>
                     <div class="subheading mb-3">Full Stack Tools</div>
                     <ul class="list-inline dev-icons">
@@ -203,7 +197,15 @@
                         <li class="list-inline-item"><i class="devicon-pycharm-plain-wordmark"></i></li>
                         <li class="list-inline-item"><i class="devicon-linux-plain colored"></i></li>
                     </ul>
-                    
+
+                    <div class="subheading mb-3">Data Science & Machine Learning</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            Scikit-learn, Pandas, Pytorch, Statistics, NLTK, Keras, TensorFlow, Matplotlib, Hadoop, Map Reduce, Spark, Spark
+                            ML, Scala, Apache Kafka, Elastic Search, Kibana, Swagger
+                        </li>
+                    </ul>
+                    <br>
                     <div class="subheading mb-3">Product Managment Experience</div>
                     <ul class="fa-ul mb-0">
                         <li>
