--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <li class="list-inline-item"><i class="devicon-typescript-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-bootstrap-plain-wordmark"></i></li>
                         <li class="list-inline-item"><i class="devicon-php-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-graphql-plain-wordmark colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-graphql-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-django-plain"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>
                         <li class="list-inline-item"><i class="devicon-react-original-wordmark"></i></li>                
@@ -184,7 +184,7 @@
                         <li class="list-inline-item" ><i class="devicon-mongodb-plain-wordmark"></i></li>                        
                         <li class="list-inline-item"><i class="devicon-redis-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-vim-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-bash-plain colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-bash-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-ssh-original-wordmark"></i></li>
                         <li class="list-inline-item" ><i class="devicon-git-plain-wordmark"></i></li>                        
                         <li class="list-inline-item"><i class="devicon-github-original"></i></li>
@@ -195,7 +195,7 @@
                         <li class="list-inline-item" ><i class="devicon-visualstudio-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-intellij-plain-wordmark"></i></li>
                         <li class="list-inline-item"><i class="devicon-pycharm-plain-wordmark"></i></li>
-                        <li class="list-inline-item"><i class="devicon-linux-plain colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-linux-plain"></i></li>
                     </ul>
 
                     <div class="subheading mb-3">Data Science & Machine Learning</div>
