--- a/index.html
+++ b/index.html
@@ -178,11 +178,10 @@
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>
                         <li class="list-inline-item"><i class="devicon-react-original-wordmark"></i></li>                
                         <li class="list-inline-item"><i class="devicon-nodejs-plain-wordmark"></i></li>
-                        <li class="list-inline-item"><i class="devicon-rails-plain-wordmar"></i></li>
-                        <li class="list-inline-item"><i class="devicon-d3js-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-rails-plain-wordmar"></i></li>                        
                         <li class="list-inline-item" ><i class="devicon-mysql-plain-wordmark"></i></li>
-                        <li class="list-inline-item" ><i class="devicon-mongodb-plain-wordmark"></i></li>                        
-                        <li class="list-inline-item"><i class="devicon-redis-plain"></i></li>
+                        <li class="list-inline-item" ><i class="devicon-mongodb-plain-wordmark"></i></li>   
+                        <li class="list-inline-item"><i class="devicon-d3js-plain"></i></li>                        
                         <li class="list-inline-item"><i class="devicon-vim-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-bash-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-ssh-original-wordmark"></i></li>
@@ -190,11 +189,12 @@
                         <li class="list-inline-item"><i class="devicon-github-original"></i></li>
                         <li class="list-inline-item"><i class="devicon-jenkins-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-tomcat-line"></i></li>
-                        <li class="list-inline-item"><i class="devicon-kubernetes-plain-wordmark"></i></li>                        
-                        <li class="list-inline-item"><i class="devicon-docker-plain-wordmark"></i></li>                        
+                        <li class="list-inline-item"><i class="devicon-docker-plain-wordmark"></i></li>
+                        <li class="list-inline-item"><i class="devicon-kubernetes-plain-wordmark"></i></li>
+                        <li class="list-inline-item"><i class="devicon-redis-plain"></i></li>
                         <li class="list-inline-item" ><i class="devicon-visualstudio-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-intellij-plain-wordmark"></i></li>
-                        <li class="list-inline-item"><i class="devicon-pycharm-plain-wordmark"></i></li>
+                        <li class="list-inline-item"><i class="devicon-intellij-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-pycharm-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-linux-plain"></i></li>
                     </ul>
 
