--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <li class="list-inline-item"><i class="devicon-vim-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-bash-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-ssh-original-wordmark"></i></li>
-                        <li class="list-inline-item" ><i class="devicon-git-plain-wordmark"></i></li>                        
+                        <li class="list-inline-item" ><i class="devicon-git-plain"></i></li>                        
                         <li class="list-inline-item"><i class="devicon-github-original"></i></li>
                         <li class="list-inline-item"><i class="devicon-jenkins-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-tomcat-line"></i></li>
