--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
                         <li class="list-inline-item"><i class="devicon-typescript-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-bootstrap-plain-wordmark"></i></li>
+                        <li class="list-inline-item"><i class="devicon-d3js-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-php-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-graphql-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-django-plain"></i></li>
@@ -180,8 +180,7 @@
                         <li class="list-inline-item"><i class="devicon-nodejs-plain-wordmark"></i></li>
                         <li class="list-inline-item"><i class="devicon-rails-plain-wordmar"></i></li>                        
                         <li class="list-inline-item" ><i class="devicon-mysql-plain-wordmark"></i></li>
-                        <li class="list-inline-item" ><i class="devicon-mongodb-plain-wordmark"></i></li>   
-                        <li class="list-inline-item"><i class="devicon-d3js-plain"></i></li>                        
+                        <li class="list-inline-item" ><i class="devicon-mongodb-plain-wordmark"></i></li>                           
                         <li class="list-inline-item"><i class="devicon-vim-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-bash-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-ssh-original-wordmark"></i></li>
@@ -189,13 +188,14 @@
                         <li class="list-inline-item"><i class="devicon-github-original"></i></li>
                         <li class="list-inline-item"><i class="devicon-jenkins-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-tomcat-line"></i></li>
-                        <li class="list-inline-item"><i class="devicon-docker-plain-wordmark"></i></li>
-                        <li class="list-inline-item"><i class="devicon-kubernetes-plain-wordmark"></i></li>
+                        <li class="list-inline-item"><i class="devicon-docker-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-kubernetes-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-redis-plain"></i></li>
                         <li class="list-inline-item" ><i class="devicon-visualstudio-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-intellij-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-pycharm-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-linux-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-apple-original"></i></li>
                     </ul>
 
                     <div class="subheading mb-3">Data Science & Machine Learning</div>
