--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
                         <li class="list-inline-item"><i class="devicon-android-plain-wordmark"></i></li>                                                
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                        <li class="list-inline-item"><i class="devicon-javascript-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-typescript-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-d3js-plain"></i></li>
+                        <!-- <li class="list-inline-item"><i class="devicon-d3js-plain"></i></li> -->
                         <li class="list-inline-item"><i class="devicon-php-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-graphql-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-django-plain"></i></li>
@@ -179,6 +179,7 @@
                         <li class="list-inline-item"><i class="devicon-react-original-wordmark"></i></li>                
                         <li class="list-inline-item"><i class="devicon-nodejs-plain-wordmark"></i></li>
                         <li class="list-inline-item"><i class="devicon-rails-plain-wordmark"></i></li>                        
+                        <li class="list-inline-item"><i class="devicon-postgresql-plain-wordmark"></i></li>
                         <li class="list-inline-item"><i class="devicon-mysql-plain-wordmark"></i></li>
                         <li class="list-inline-item"><i class="devicon-mongodb-plain-wordmark"></i></li>                           
                         <li class="list-inline-item"><i class="devicon-vim-plain"></i></li>
