--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-aws"></i></li>                        
                         <li class="list-inline-item"><i class="devicon-android-plain-wordmark"></i></li>                                                
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                        <li class="list-inline-item"><i class="devicon-html5-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-css3-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-javascript-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-typescript-plain"></i></li>
                         <!-- <li class="list-inline-item"><i class="devicon-d3js-plain"></i></li> -->
