remove apple icon

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <li class="list-inline-item"><i class="devicon-intellij-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-pycharm-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-linux-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-apple-original"></i></li>
+                        <!-- <li class="list-inline-item"><i class="devicon-apple-original"></i></li> -->
                     </ul>
 
                     <div class="subheading mb-3">Data Science & Machine Learning</div>
