--- a/index.html
+++ b/index.html
@@ -153,11 +153,10 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
+                    <h2 class="mb-5">Skills</h2>                    
                     <div class="subheading mb-3">Over 5000 lines of code</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><img src="assets/img/Go-Logo_Black.svg"></i></li>
-                        <!-- <li class="list-inline-item"><i class="devicon-go-plain"></i></li> -->
+                    <ul class="list-inline dev-icons">  
+                        <li class="list-inline-item"><i class="devicon-go-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-python-plain-wordmark"></i></li>
                         <li class="list-inline-item"><i class="devicon-cplusplus-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-java-plain-wordmark"></i></li>                        
