change paper url

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><a href="https://www.cse.iitb.ac.in/~ganesh/papers/wsc2018.pdf"
+                            <h3 class="mb-0"><a href="https://open.library.ubc.ca/cIRcle/collections/70440/items/1.0391834"
                                     target="_blank">Improving the learnability of classifiers in Sanskrit OCR corrections</a></h3>
                             <div class="subheading mb-3">Devaraj Adiga, Rohit Saluja, <b>Vaibhav Agrawal</b>, Ganesh Ramakrishnan, Parag Chaudhuri, K. Ramasubramanian, Malhar Kulkarni</div>
                             <p>                                
