--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <p class="lead mb-5">My name is Vaibhav.  I  ♥  to code!! 
 
-                        I am a Software Engineer on Money Team at Twitch Interactive, Inc.
+                        I am a Software Engineer on the Payments Team at Twitch Interactive, Inc.
 
                         I am a computer science enthusiast. I hold a Master of Science in Computer Science from New York University.                
                        
