--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Software Developer Engineer</h3>
+                            <h3 class="mb-0">Software Engineer</h3>
                             <div class="subheading mb-3"><img alt src="/assets/img/twitch.jpg" style="max-height: 32px;">   Twitch, San Francisco CA</div>
-                            <p>SDE I on Money Team. (Go, GQL, AWS and Ruby on Rails)<i></i></p>
+                            <p>SDE I on Money Team. (Go, Typescript, GQL, AWS and Ruby on Rails)<i></i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2021 - Present</span></div>
                     </div>
