--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Associate Product Manager Intern</h3>
                             <div class="subheading mb-3"><span style="font-size: 1.1em; color:#1798c1;"><i class="fab fa-salesforce"></i></span>  Salesforce.com, San Francisco CA</div>
-                            <p>Worked in Platform Standards Cloud on the core engineering productivity systems to help GUS users in efficient major release management.</p>
+                            <p>Worked in Platform Cloud on the core engineering productivity systems to help GUS users in efficient major release management.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2020 - Aug 2020</span></div>
                     </div>
