--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Vaibhav Agrawal</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.png" alt="" /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile1.png" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -84,7 +84,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer II</h3>
                             <div class="subheading mb-3"><img alt src="/assets/img/twitch.jpg" style="max-height: 32px;">   Twitch, San Francisco CA</div>
-                            <p>SDE II on Money Team. (Go, Typescript, GQL, AWS and Ruby on Rails)<i></i></p>
+                            <p>Working on building resilient, scalable, and flexible payments platform to help sell & build digital products faster<i></i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2021 - Present</span></div>
                     </div>
@@ -93,7 +93,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Developer (Django, React.js, SQL)</h3>
                             <div class="subheading mb-3"><img alt src = "/assets/img/nyu.jpg" style="max-height: 35px;">  FITL, New York University</div>
-                            <p>Building a RESTful API driven web app to manage the undergraduate tutoring program with a dedicated algorithm for matching students and tutors into individual and shared tutoring sessions. <i></i></p>
+                            <p>Built a RESTful API driven web app to manage the undergraduate tutoring program with a dedicated algorithm for matching students and tutors into individual and shared tutoring sessions. <i></i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Oct 2019 - Dec 2020</span></div>
                     </div>
@@ -240,7 +240,7 @@
                             <div class="subheading mb-3"><b>Vaibhav Agrawal</b>, Sudipa Chatterjee, Sudeshna Mitra</div>
                             <p>
                                 Published in the <a href="https://www.jstage.jst.go.jp/browse/easts/" target="_blank">Journal of the Eastern Asia Society for Transportation Studies</a>, 2019 Volume 13 Pages 2614-2629. 
-                                <br><br><b>Keywords</b>: Crash severity, Data Mining, Traffic Crashes, XGBoost; <a href="https://scholar.google.com/scholar?oi=bibs&hl=en&cites=10823446853425154945"><u>Cited by 2</u></a>
+                                <br><br><b>Keywords</b>: Crash severity, Data Mining, Traffic Crashes, XGBoost; <a href="https://scholar.google.com/scholar?oi=bibs&hl=en&cites=10823446853425154945"><u>Cited by 3</u></a>
                                 <a href="https://doi.org/10.11175/easts.13.2614" target="_blank" style="color:#DC143C;">[PDF]</a>
                             </p>
                         </div>
@@ -251,10 +251,11 @@
                             <h3 class="mb-0"><a href="https://open.library.ubc.ca/cIRcle/collections/70440/items/1.0391834"
                                     target="_blank">Improving the learnability of classifiers in Sanskrit OCR corrections</a></h3>
                             <div class="subheading mb-3">Devaraj Adiga, Rohit Saluja, <b>Vaibhav Agrawal</b>, Ganesh Ramakrishnan, Parag Chaudhuri, K. Ramasubramanian, Malhar Kulkarni</div>
-                            <p>                                
-                                Presented at the <a href="https://wsc.ubcsanskrit.ca/ocs/wsc/2018" target="_blank">17th World Sanskrit Conference</a> at Vancouver Canada in July 2018. 
+                            <p>           
+                                Published in the <a href="https://open.library.ubc.ca/soa/cIRcle/collections/70440/items/1.0391834" target="_blank">Computational Sanskrit & Digital Humanities</a>, 2018 Pages 143-161. 
+                                <br><br>Presented at the <a href="https://wsc.ubcsanskrit.ca/ocs/wsc/2018" target="_blank">17th World Sanskrit Conference</a> at Vancouver Canada in July 2018. 
                                 <br><br><b>Keywords</b>: OCR, Deep Learning, NLP, Attention Models; <a href="https://scholar.google.com/scholar?oi=bibs&hl=en&cites=263963061334516867"><u>Cited by 5</u></a>
-                                <a href="https://www.cse.iitb.ac.in/~ganesh/papers/wsc2018.pdf" target="_blank" style="color:#DC143C;"> [PDF]</a>
+                                <a href="http://pauillac.inria.fr/~huet/PUBLIC/WSC2018.pdf#page=161" target="_blank" style="color:#DC143C;"> [PDF]</a>
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2018</span></div>
