--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
                         <span class="text-primary">Agrawal</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Software Engineer · <span style="color:black;">San Francisco, CA </span>
+                        Software Engineer · <span style="color:black;">Seattle, WA </span>
                         <br />
                         <br />
                         Aiming for INFINITY!
                     </div>
                     <p class="lead mb-5">My name is Vaibhav.  I  ♥  to code!! 
 
-                        I am a Software Engineer on the Payments Team at Twitch Interactive, Inc.
+                        I am a Software Engineer in the Monetization Org at Meta.
 
                         I am a computer science enthusiast. I hold a Master of Science in Computer Science from New York University.                
                        
@@ -82,11 +82,19 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Software Engineer</h3>
+                            <div class="subheading mb-3"><img alt src="/assets/img/meta.jpg" style="max-height: 32px;"> Meta, Bellevue WA</div>
+                            <p>Working on building resilient, scalable, and flexible monetization platform for Facebook<i></i></p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Feb 2024 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer II</h3>
-                            <div class="subheading mb-3"><img alt src="/assets/img/twitch.jpg" style="max-height: 32px;">   Twitch, San Francisco CA</div>
+                            <div class="subheading mb-3"><img alt src="/assets/img/twitch.jpg" style="max-height: 32px;">   Twitch, Seattle WA</div>
                             <p>Working on building resilient, scalable, and flexible payments platform to help sell & build digital products faster<i></i></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Mar 2021 - Feb 2024</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -240,7 +248,7 @@
                             <div class="subheading mb-3"><b>Vaibhav Agrawal</b>, Sudipa Chatterjee, Sudeshna Mitra</div>
                             <p>
                                 Published in the <a href="https://www.jstage.jst.go.jp/browse/easts/" target="_blank">Journal of the Eastern Asia Society for Transportation Studies</a>, 2019 Volume 13 Pages 2614-2629. 
-                                <br><br><b>Keywords</b>: Crash severity, Data Mining, Traffic Crashes, XGBoost; <a href="https://scholar.google.com/scholar?oi=bibs&hl=en&cites=10823446853425154945"><u>Cited by 5</u></a>
+                                <br><br><b>Keywords</b>: Crash severity, Data Mining, Traffic Crashes, XGBoost; <a href="https://scholar.google.com/scholar?oi=bibs&hl=en&cites=10823446853425154945"><u>Cited by 9</u></a>
                                 <a href="https://doi.org/10.11175/easts.13.2614" target="_blank" style="color:#DC143C;">[PDF]</a>
                             </p>
                         </div>
@@ -254,7 +262,7 @@
                             <p>           
                                 Published in the <a href="https://open.library.ubc.ca/soa/cIRcle/collections/70440/items/1.0391834" target="_blank">Computational Sanskrit & Digital Humanities</a>, 2018 Pages 143-161. 
                                 <br><br>Presented at the <a href="https://wsc.ubcsanskrit.ca/ocs/wsc/2018" target="_blank">17th World Sanskrit Conference</a> at Vancouver Canada in July 2018. 
-                                <br><br><b>Keywords</b>: OCR, Deep Learning, NLP, Attention Models; <a href="https://scholar.google.com/scholar?oi=bibs&hl=en&cites=263963061334516867"><u>Cited by 6</u></a>
+                                <br><br><b>Keywords</b>: OCR, Deep Learning, NLP, Attention Models; <a href="https://scholar.google.com/scholar?oi=bibs&hl=en&cites=263963061334516867"><u>Cited by 7</u></a>
                                 <a href="http://pauillac.inria.fr/~huet/PUBLIC/WSC2018.pdf#page=161" target="_blank" style="color:#DC143C;"> [PDF]</a>
                             </p>
                         </div>
