--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer</h3>
                             <div class="subheading mb-3"><img alt src="/assets/img/meta.jpg" style="max-height: 32px;"> Meta, Bellevue WA</div>
-                            <p>Working on building resilient, scalable, and flexible monetization platform for Facebook<i></i></p>
+                            <p>Developing scalable signal processing systems for Facebook’s monetization signal growth platform<i></i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Feb 2024 - Present</span></div>
                     </div>
