--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <p class="lead mb-5">My name is Vaibhav.  I  ♥  to code!! 
 
-                        I am a Software Engineer in the Monetization Org at Meta.
+<!--                         I am a Software Engineer in the Monetization Org at Meta. -->
 
                         I am a computer science enthusiast. I hold a Master of Science in Computer Science from New York University.                
                        
@@ -80,14 +80,14 @@
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+<!--                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer</h3>
                             <div class="subheading mb-3"><img alt src="/assets/img/meta.jpg" style="max-height: 32px;"> Meta, Bellevue WA</div>
                             <p>Developing scalable signal processing systems for Facebook’s monetization signal growth platform<i></i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Feb 2025 - Present</span></div>
-                    </div>
+                    </div> -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer II</h3>
