--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <p class="lead mb-5">My name is Vaibhav.  I  ♥  to code!! 
 
-                        I am currently a Software Engineer in Facebook's monetization org.
+                        I am a Software Engineer in Facebook's monetization org.
 
                         As a Software Engineer, I have developed expertise in designing and implementing high-performance distributed systems. 
                         
