--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publications">Publications</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="Resume.pdf" target="_blank">Resume</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#" target="_blank">Resume</a></li>
                 </ul>
             </div>
         </nav>
