--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <p class="lead mb-5">My name is Vaibhav.  I  ♥  to code!! 
 
-                        I am a software engineer at Facebook's monetization org.
+                        I am a software engineer in Facebook's monetization org.
 
                         As a Software Engineer, I have developed expertise in designing and implementing high-performance distributed systems. 
                         
@@ -86,7 +86,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer</h3>
                             <div class="subheading mb-3"><img alt src="/assets/img/meta.jpg" style="max-height: 32px;"> Meta, Bellevue WA</div>
-                            <p>Developing ad measurement systems for Facebook and Instagram platform<i></i></p>
+                            <p>Building ad measurement systems for Facebook and Instagram<i></i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Mar 2025 - Present</span></div>
                     </div>
