--- a/index.html
+++ b/index.html
@@ -86,24 +86,24 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer</h3>
                             <div class="subheading mb-3"><img alt src="/assets/img/meta.jpg" style="max-height: 32px;"> Meta, Bellevue WA</div>
-                            <p>Building ad measurement systems for Facebook and Instagram<i></i></p>
+                            <p>Building distributed ad measurement systems for Facebook and Instagram<i></i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Mar 2025 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Software Engineer II</h3>
+                            <h3 class="mb-0">Software Engineer</h3>
                             <div class="subheading mb-3"><img alt src="/assets/img/twitch.jpg" style="max-height: 32px;">   Twitch, Seattle WA</div>
-                            <p>Working on building resilient, scalable, and flexible payments platform to help sell & build digital products faster<i></i></p>
+                            <p>Built distributed and scalable payments platform to help sell digital products<i></i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Mar 2021 - Feb 2025</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Software Developer (Django, React.js, SQL)</h3>
+                            <h3 class="mb-0">Software Developer (Part time)</h3>
                             <div class="subheading mb-3"><img alt src = "/assets/img/nyu.jpg" style="max-height: 35px;">  FITL, New York University</div>
-                            <p>Built a RESTful API driven web app to manage the undergraduate tutoring program with a dedicated algorithm for matching students and tutors into individual and shared tutoring sessions. <i></i></p>
+                            <p>Built a RESTful API driven web app (Django, React.js, SQL) to manage the undergraduate tutoring program with a dedicated algorithm for matching students and tutors into individual and shared tutoring sessions. <i></i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Oct 2019 - Dec 2020</span></div>
                     </div>
